Mudando tam. fonte
Alterações simples.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <section class="container">
         <header class="header">
             <img src="images/tita perfil.jpeg" alt="Foto de logo">
-            <h1>Tita Souza - Personal Trainer</h1>
+            <h1>Tita Souza <br> Personal Trainer</h1>
             <p>Te ajudo emagrecer de forma flexível</p>
         </header>
-        <section class="botoes-links btn-contatos">
+        <section class="btn-contatos">
             <ul class="contatos-btn">
                 <a href="https://www.instagram.com/titasouzapersonal/" target="_blank">
                     <li class="btn" style="--cor1:#fb3997; --cor2:#febf12;">
