--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/formatacao.css">
     <link rel="stylesheet" href="style/styles.css">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
     <title>Links Tita Personal</title>
 </head>
 <body>
@@ -21,33 +17,35 @@
             <ul class="contatos-btn">
                 <a href="https://www.instagram.com/titasouzapersonal/" target="_blank">
                     <li class="btn" style="--cor1:#fb3997; --cor2:#febf12;">
-                            <span class="icon">
-                                <i class="bi bi-instagram"></i>
-                            </span>
-                            <span class="text">Instagram</span>
+                        <span class="icon">
+                            <img src="images/instagram-logo.svg" alt="logo intagran">
+                       </span>
+                        <span class="text">
+                            Instagram
+                        </span>
                     </li>
                 </a>
                 <a href="https://www.facebook.com/patricia.souza.140193?locale=pt_BR" target="_blank">
                         <li class="btn" style="--cor1:#85d8f2; --cor2:#005eff;">
                             <span class="icon">
-                                <i class="bi bi-facebook"></i>
-                            </span>
+                                <img src="images/facebook-logo.webp" alt="logo intagran">
+                           </span>
                             <span class="text">Facebook</span>
                         </li>
                 </a>
                 <a href="https://shre.ink/HOnX" target="_blank">
                         <li class="btn" style="--cor1:#5ce58c; --cor2:#008504;">
                             <span class="icon">
-                                <i class="bi bi-whatsapp"></i>
-                            </span>
+                                <img src="images/whatsapp-logo.svg" alt="logo intagran">
+                           </span>
                             <span class="text">Whatssap</span>
                         </li>
                 </a>
                 <a href="https://www.youtube.com/@Titasouzapersonal" target="_blank">
                     <li class="btn" style="--cor1:#fc0000; --cor2:#f89999;">
                         <span class="icon">
-                            <i class="bi bi-youtube"></i>
-                        </span>
+                            <img src="images/youtube0-logo.svg" alt="logo intagran">
+                       </span>
                         <span class="text">Youtube</span>
                     </li>
                 </a>
@@ -55,15 +53,13 @@
         </section><!--botoes-links-->
 
         <footer>
-            <a href="#" btn-footer target="_blank">
-                <i class="bi bi-envelope-fill"></i>
-            </a>
-            <a href="#" btn-footer target="_blank">
-                <i class="bi bi-linkedin"></i>
-            </a>
+            <h2>Outros links</h2>
+            <div class="link-extra">
+                <a href="#"><img src="images/email-logo.svg" alt="email"></a>
+                <a href="#"><img src="images/linkedin-logo2.svg" alt="Linkedin"></a>
+                <a href=""><img src="images/twitter-logo.svg" alt="Twitter"></a>
+            </div>
         </footer>
     </section><!--container-->
-
-    
 </body>
 </html>
