--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style/styles.css">
     <title>Links Tita Personal</title>
 </head>
@@ -18,7 +19,7 @@
                 <a href="https://www.instagram.com/titasouzapersonal/" target="_blank">
                     <li class="btn" style="--cor1:#fb3997; --cor2:#febf12;">
                         <span class="icon">
-                            <img src="images/instagram-logo.svg" alt="logo intagran">
+                            <i class="bi bi-instagram"></i>
                        </span>
                         <span class="text">
                             Instagram
@@ -28,7 +29,7 @@
                 <a href="https://www.facebook.com/patricia.souza.140193?locale=pt_BR" target="_blank">
                         <li class="btn" style="--cor1:#85d8f2; --cor2:#005eff;">
                             <span class="icon">
-                                <img src="images/facebook-logo.webp" alt="logo intagran">
+                                <i class="bi bi-facebook"></i>
                            </span>
                             <span class="text">Facebook</span>
                         </li>
@@ -36,7 +37,7 @@
                 <a href="https://shre.ink/HOnX" target="_blank">
                         <li class="btn" style="--cor1:#5ce58c; --cor2:#008504;">
                             <span class="icon">
-                                <img src="images/whatsapp-logo.svg" alt="logo intagran">
+                                <i class="bi bi-whatsapp"></i>
                            </span>
                             <span class="text">Whatssap</span>
                         </li>
@@ -44,7 +45,7 @@
                 <a href="https://www.youtube.com/@Titasouzapersonal" target="_blank">
                     <li class="btn" style="--cor1:#fc0000; --cor2:#f89999;">
                         <span class="icon">
-                            <img src="images/youtube0-logo.svg" alt="logo intagran">
+                            <i class="bi bi-youtube"></i>
                        </span>
                         <span class="text">Youtube</span>
                     </li>
@@ -55,9 +56,9 @@
         <footer>
             <h2>Outros links</h2>
             <div class="link-extra">
-                <a href="#"><img src="images/email-logo.svg" alt="email"></a>
-                <a href="#"><img src="images/linkedin-logo2.svg" alt="Linkedin"></a>
-                <a href=""><img src="images/twitter-logo.svg" alt="Twitter"></a>
+                <a href="#"><i class="bi bi-envelope-at-fill"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="#"><i class="bi bi-twitter"></i></a>
             </div>
         </footer>
     </section><!--container-->
